# plugin.SofaOpenglVisual2

./: CMakeLists.txt  Readme.md  SofaRenderingGLConfig.cmake.in  initSofaRenderingGL.cpp
src/SofaOpenglVisual2/: PointSplatRenderer.cpp  PointSplatRenderer.h  config.h
